--- a/src/index.css
+++ b/src/index.css
@@ -28,8 +28,6 @@ body {
   margin: 10px;
   display: flex;
   place-items: center;
- /*  min-width: 320px;
-  min-height: 100vh; */
 }
 .container {
     display: flex;
@@ -37,6 +35,9 @@ body {
 }
 .registro {
   width: 350px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
 h1 {
   font-size: 3.2em;
@@ -85,7 +86,6 @@ button:focus-visible {
 }
 .FormTask {
   font-size: 15px;
-  /* margin: 10% 20%; */
   padding: 3% 1%;
   display: flex;
   justify-content: space-between;
