--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,13 @@ body {
   margin: 10px;
   display: flex;
   place-items: center;
+  font-family: 'Signika Negative', sans-serif;
 }
 .container {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 50px
     
 }
 .registro {
@@ -44,6 +48,34 @@ h1 {
   line-height: 1.1;
 }
 
+.buttonheader {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1.2em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #474073;
+  cursor: pointer;
+  transition: border-color 0.25s;
+   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+ 
+}
+
+.buttonform {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #f14a0d;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 4);
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -54,7 +86,15 @@ button {
   background-color: #f14a0d;
   cursor: pointer;
   transition: border-color 0.25s;
+ 
 }
+buttonform:hover, .buttonheader:hover
+{
+    border-color: #f5eb28;
+    box-shadow: 0 0 20px #F24405;
+    border-radius: 55px;
+  }
+
 button:hover {
   border-color: #f5eb28;
   box-shadow: 0 0 20px #F24405;
@@ -109,6 +149,169 @@ button:focus-visible {
   box-shadow: 0 0 20px #1a5780;
   border-radius: 55px;
 }
+.about-us {
+  display: flex;
+  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.panel {
+  flex-basis: calc(50% - 10px);
+  padding: 20px;
+  background-color: #A0E3F2;
+  margin-bottom: 20px;
+}
+
+h2 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+p {
+  font-size: 14px;
+  line-height: 1.5;
+}
+
+a {
+  color: #000;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+.justified-paragraph {
+  text-align: justify;
+  font-family: 'Signika Negative', sans-serif;
+}
+
+.icon-image {
+  width: 18em;
+  height: 18em;
+}
+/*:::::Pie de Pagina*/
+.pie-pagina {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background-color: #474073;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 4);
+}
+
+.pie-pagina .grupo-1 {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 5px;
+  padding: 3px 1px;
+}
+
+.pie-pagina .grupo-1 .boxfooter h2 {
+  color: #D3F263;
+  margin-bottom: 8px;
+  font-size: 15px;
+}
+
+.pie-pagina .grupo-1 .boxfooter p {
+  color: #D3F263;
+  margin-bottom: 10px;
+}
+
+.pie-pagina .grupo-1 .red-social a {
+  display: inline-block;
+  text-decoration: none;
+  color: #D3F263;
+  background-color: #474073;
+  text-align: center;
+  transition: all 300ms ease;
+}
+
+.pie-pagina .grupo-1 .red-social a:hover {
+  color: #D3F263;
+}
+
+.pie-pagina .grupo-2 {
+  background-color: #220027;
+  padding: 5px 10px;
+  text-align: center;
+  color: #D3F263;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 5px;
+  padding: 3px 1px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 4);
+}
+
+.pie-pagina .grupo-2 small {
+  font-size: 12px;
+}
+.pie-pagina .grupo-1 .icon-logo {
+  width: 2em;
+  height: 2em;
+}
+
+.navbar {
+  position: fixed;
+  top: 20px;
+  left: 0;
+  width: 100%;
+  background-color: #474073;
+  z-index: 100;
+  margin-right: 1rem;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 4);
+}
+
+.navbar a:hover {
+  color: #F24405;
+}
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.pages {
+  display: flex;
+  align-items: center;
+}
+
+.button-group {
+  position: absolute;
+    top: 0;
+    left: 35px;
+}
+
+.buttonheader {
+  background-color: transparent;
+  border: none;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.login-form input[type='text'],
+.login-form input[type='password'] {
+  padding: 8px;
+  margin-right: 10px;
+}
+.login-form {
+  position: absolute;
+  top: 0;
+  right: 35px;
+}
+span.error {
+  display: block;
+  color: red;
+  font-style: italic;
+  font-size: 0.8rem;
+  margin-top: 0.2rem;
+}
+
+
+
 
 @media (prefers-color-scheme: light) {
   :root {
