--- a/src/index.css
+++ b/src/index.css
@@ -310,8 +310,55 @@ span.error {
   margin-top: 0.2rem;
 }
 
+.taskName:hover::after {
+  content: ' ..Show more';
+  color: #F26E22;
+  cursor: pointer;
+}
 
+.tasklabels{
+  font-size: 15px;
+    margin: 1px;
+    padding: 1px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-grow: 1;
+    font-size: 13px;
+}
 
+.taskcard {
+    font-size: 15px;
+    margin: 1px;
+    padding: 1px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-grow: 1;
+    font-size: 13px;
+    border-collapse: collapse;
+    width: 100%;
+    margin: 2px 0;
+    background-color: #A0E3F2;
+    padding: 2px;
+    margin: 2px;
+    
+}
+
+.taskcard h2 {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.taskcard p {
+  font-size: 14px;
+  color: #474073);
+    
+}
+
+.hidden {
+  display: none;
+}
 
 @media (prefers-color-scheme: light) {
   :root {
